# OD-translator

./: .gitignore  README.md  TODO.md  batch_commands_example.csv  changes_summary.md  pyproject.toml  requirements.txt  sample_commands.md
data/batch_commands/: batch_commands_example.json  batch_commands_example.txt
data/mitre/: attackcti_t1059.json
data/mitre_docs/: README.md  manifest.json
data/mitre_docs/markdown/: T1027.md  T1055.md  T1059.md  T1071.md  T1105.md  T1218.md  T1543.md
data/reports/: analysis_20260304_212905.html  analysis_20260304_213220.html  analysis_20260304_233609.html  batch_20260304_212915.html  batch_20260304_233005.html
docs/: changes_summary.md  cyber_kill_chain_mapping.md  examples.md  function_flow.mmd  odt_application_flowchart.mmd  test_implementation_summary.md
scripts/: sync_mitre_docs.py
src/: __init__.py
src/cli/: main.py
src/core/: batch_processor.py  decoder.py  detector.py  mitre.py  output.py  parser.py  pipeline.py  report_generator.py
src/detection/: __init__.py  metadata.py  technique_pattern_db.py
src/models/: core.py  defensive.py  educational.py  metadata.py
src/odt/: __init__.py
src/odt/cli/: main.py
src/odt/core/: __init__.py  detector.py  mitre.py  output.py  parser.py  pipeline.py
src/odt/detection/: __init__.py  heuristic_engine.py  indicators.py  interpreter_markers.py  (+3 more)
tests/: README.md  __init__.py  test_batch_processor.py  test_benign_commands.py  test_cli.py  test_decoder.py  test_detector.py  test_output_intent.py  test_parser.py  test_realistic_commands.py  test_report_generator.py
